Updated Discord widget

--- a/community/index.html
+++ b/community/index.html
@@ -23,6 +23,6 @@ title: Zuurix.com - Community
 <li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">Games by Zuurix Wiki</a></li>
 </ul>
 
-<iframe src="https://discordapp.com/widget?id=331707688956329985" width="100%" height="288" allowtransparency="true" frameborder="0"></iframe>
+<iframe src="https://discordapp.com/widget?id=331707688956329985&theme=dark" width="100%" height="288" allowtransparency="true" frameborder="0"></iframe>
 
 {% include disqus.html %}
