--- a/community/index.html
+++ b/community/index.html
@@ -11,16 +11,18 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:none">
-<li><a href="https://www.patreon.com/zuurix" target="_blank">Zuurix's Patreon page</a></li>
-<li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">Zuurix's Facebook page</a></li>
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">Zuurix's Steam group</a></li>
-<li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">Zuurix's YouTube channel</a></li>
-<li><a href="https://twitter.com/DeveloperZuurix" target="_blank">Zuurix on Twitter</a></li>
-<li><a href="https://zuurix.itch.io/" target="_blank">Zuurix on Itch.io</a></li>
-<li><a href="http://www.indiedb.com/members/zuurix" target="_blank">Zuurix on IndieDB</a></li>
-<li><a href="http://www.giantbomb.com/profile/zuurix/" target="_blank">Zuurix on Giant Bomb</a></li>
-<li><a href="http://gamejolt.com/@Zuurix" target="_blank">Zuurix on GameJolt</a></li>
-<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">Games by Zuurix Wiki</a></li>
+<li><a href="https://www.patreon.com/zuurix" target="_blank">                                   Patreon</a></li>
+<li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a></li>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam</a></li>
+<li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</a></li>
+<li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</a></li>
+<li><a href="https://zuurix.itch.io/" target="_blank">                                          Itch.io</a></li>
+<li><a href="http://www.indiedb.com/members/zuurix" target="_blank">                            IndieDB</a></li>
+<li><a href="http://gamejolt.com/@Zuurix" target="_blank">                                      GameJolt</a></li>
+<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki</a></li>
+<li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</a></li>
+<li><a href="https://forum.yoyogames.com/index.php?members/zuurix.166/" target="_blank">        GMC Forums</a></li>
+<li><a href="https://forums.tigsource.com/index.php?action=profile;u=75576" target="_blank">    TIG Forums</a></li>
 </ul>
 
 <iframe src="https://discordapp.com/widget?id=331707688956329985" width="100%" height="288" allowtransparency="true" frameborder="0"></iframe>
