--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -60,7 +60,7 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 
 	<li>Aivaras Klimas</li>
-	<li><b>Email:</b> gamesbyzuurix@gmail.com</li>
+	<li><b>Email:</b> zuurixgames@gmail.com</li>
 
 	</ul>
 	
