Added Sector Six stats

--- a/community/index.html
+++ b/community/index.html
@@ -22,4 +22,6 @@ title: Zuurix.com - Community
 
 <iframe src="https://discordapp.com/widget?id=331707688956329985" width="100%" height="288" allowtransparency="true" frameborder="0"></iframe>
 
+<iframe src="https://steamdb.info/embed/?appid=465020" height="389px" width="100%" scrolling="no" frameborder="0"></iframe>
+
 {% include disqus.html %}
