--- a/community/index.html
+++ b/community/index.html
@@ -20,8 +20,16 @@ title: Zuurix.com - Community
 <li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</a></li>
 </ul>
 
-<iframe src="https://discordapp.com/widget?id=331707688956329985" width="100%" height="288" allowtransparency="true" frameborder="0"></iframe>
+<comments>
+<a>In-game</a>
+</comments>
 
 <iframe src="https://steamdb.info/embed/?appid=465020" height="389px" width="100%" scrolling="no" frameborder="0"></iframe>
+
+<comments>
+<a>Discuss</a>
+</comments>
+
+<iframe src="https://discordapp.com/widget?id=331707688956329985" width="100%" height="288" allowtransparency="true" frameborder="0"></iframe>
 
 {% include disqus.html %}
