--- a/community/index.html
+++ b/community/index.html
@@ -24,12 +24,12 @@ title: Zuurix.com - Community
 <a>In-game</a>
 </comments>
 
-<iframe src="https://steamdb.info/embed/?appid=465020" height="389px" width="100%" scrolling="no" frameborder="32"></iframe>
+<iframe src="https://steamdb.info/embed/?appid=465020" margin_top = "16" margin_bottom = "16" width="100%" height="288px" scrolling="no" frameborder=""></iframe>
 
 <comments>
 <a>Discuss</a>
 </comments>
 
-<iframe src="https://discordapp.com/widget?id=331707688956329985" width="100%" height="288" allowtransparency="true" frameborder="32"></iframe>
+<iframe src="https://discordapp.com/widget?id=331707688956329985" margin_top = "16" margin_bottom = "16" width="100%" height="288" allowtransparency="true" frameborder=""></iframe>
 
 {% include disqus.html %}
