--- a/community/index.html
+++ b/community/index.html
@@ -24,12 +24,16 @@ title: Zuurix.com - Community
 <a>In-game</a>
 </comments>
 
+<content>
 <iframe src="https://steamdb.info/embed/?appid=465020" margin-top = "16" margin-bottom = "16" width="100%" height="389px" scrolling="no" frameborder=""></iframe>
-
+</content>
+  
 <comments>
 <a>Discuss</a>
 </comments>
 
+<content>
 <iframe src="https://discordapp.com/widget?id=331707688956329985" margin-top = "16" margin-bottom = "16" width="100%" height="288" allowtransparency="true" frameborder=""></iframe>
-
+</content>
+  
 {% include disqus.html %}
