--- a/community/index.html
+++ b/community/index.html
@@ -38,6 +38,14 @@ title: Zuurix.com - Community
 <a>Discuss</a>
 </comments>
 
+<space>
+<a> </a>
+</space>
+
 <iframe src="https://discordapp.com/widget?id=331707688956329985" margin-top = "16" margin-bottom = "16" width="100%" height="288" allowtransparency="true" frameborder=""></iframe>
   
+<space>
+<a> </a>
+</space>
+
 {% include disqus.html %}
