--- a/community/index.html
+++ b/community/index.html
@@ -21,21 +21,7 @@ title: Zuurix.com - Community
 </ul>
 
 <comments>
-<a>In-game</a>
-</comments>
-
-<space>
-<a> </a>
-</space>
-
-<iframe src="https://steamdb.info/embed/?appid=465020" margin-top = "16" margin-bottom = "16" width="100%" height="389px" scrolling="no" frameborder=""></iframe>
-
-<space>
-<a> </a>
-</space>
-
-<comments>
-<a>Discuss</a>
+<a>Discord</a>
 </comments>
 
 <space>
@@ -44,6 +30,14 @@ title: Zuurix.com - Community
 
 <iframe src="https://discordapp.com/widget?id=331707688956329985" margin-top = "16" margin-bottom = "16" width="100%" height="288" allowtransparency="true" frameborder=""></iframe>
   
+<space>
+<a> </a>
+</space>
+
+<comments>
+<a>Comments</a>
+</comments>
+
 <space>
 <a> </a>
 </space>
