--- a/other-games/index.html
+++ b/other-games/index.html
@@ -17,7 +17,7 @@ title: Zuurix.com - Other games
 <p>My first real CCG. A prototype for upcoming much bigger and better CCG.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="https://zuurix.itch.io/the-name-of-the-demon" target="_blank">Download</a></li>
+<li><a href="https://zuurix.itch.io/the-cursed-legion" target="_blank">Download</a></li>
 </ul>
 	
 <comments>
