--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Home
 	
 	<h1>Home</h1>
 	
-	<p>Welcome to home for awesome indie games created by Zuurix! 2</p>
+	<p>Welcome to home for awesome indie games created by Zuurix!</p>
 	
 	<comments>
 	<a>Blog</a>
@@ -14,7 +14,7 @@ title: Zuurix.com - Home
 
 <ul class="posts">
 	
-	{% for post in site.posts if loop.index > 1 %}
+	{% for post in site.posts %}
 	<span>{{ post.date | date_to_long_string }}</span>
 	<li> <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	{% endfor %}
