--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Zuurix.com - Home
 	
 	{% for post in site.posts %}
 	<li> <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	<p>{{ post.date | date_to_long_string }}</p>
+	<p2>{{ post.date | date_to_long_string }}</p2>
 	{% endfor %}
 	
 </ul>
