--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Zuurix.com - Home
 	
 	<h1>Home</h1>
 	
-	<p>Welcome to home for awesome indie games created by Zuurix!</p>
+	<p>Welcome to home for awesome indie games created by Zuurix! 1</p>
 	
 	<comments>
 	<a>Blog</a>
