--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@ title: Zuurix.com - Home
 	{% for post in site.posts %}
 	<li> <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	<p2>{{ post.date | date_to_long_string }}</p2>
+	
+	<space>
+	<a> </a>
+	</space>
+	
 	{% endfor %}
 	
 </ul>
