--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ title: Zuurix.com - Home
 	<li> <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	<p2>{{ post.date | date_to_long_string }}</p2>
 	
-	<space>
+	<mini-space>
 	<a> </a>
-	</space>
+	</mini-space>
 	
 	{% endfor %}
 	
