--- a/other-games/index.html
+++ b/other-games/index.html
@@ -14,7 +14,7 @@ title: Zuurix.com - Other games
 	
 <img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/miscellaneous/Square%20artwork%20with%20logo.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
-<p>My first real CCG. A prototype for upcoming much bigger and better CCG.</p>	
+<p>My first real CCG. A prototype for Legion of Eternity.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/the-cursed-legion" target="_blank">Download</a></li>
