--- a/community/index.html
+++ b/community/index.html
@@ -7,6 +7,12 @@ title: Zuurix.com - Community
 <p>Follow, like, share, join, contribute, discuss!</p>
 
 <comments>
+<a>Weekly message</a>
+</comments>
+
+<p>Coming soon!</p>
+
+<comments>
 <a>Links</a>
 </comments>
 
@@ -17,7 +23,6 @@ title: Zuurix.com - Community
 <li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</a></li>
 <li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki</a></li>
 <li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</a></li>
-<li><a href="https://www.patreon.com/zuurix" target="_blank">                                   Patreon</a></li>
 </ul>
 
 <comments>
