--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p>Coming soon!</p>
+<a>Coming soon!</a>
 
 <comments>
 <a>Links</a>
