--- a/about/index.html
+++ b/about/index.html
@@ -5,26 +5,20 @@ title: Zuurix.com - About
 <div class="blurb">
 
 <h1>About</h1>
-	
-<p>'Ello! I am Ivar, also known as an independent game developer Zuurix. I am 21 years old and I am from Lithuania, which explains all the grammar errors =]
+
+<p>'Ello! I am Ivar, also known as an independent game developer Zuurix.
+<p>I am 21 years old and I am from Lithuania, which explains all the grammar errors =]
 
 <p>Ever since I have discovered the awesomeness that is computer games, I wanted to make my own.
-
 <p>Before I started developing games, I used to make drawings in MS Paint - quest logs, items, areas, monsters and other elements of a fictional game, that I pretended to be making.
 
-<p>After spending too much time doing that, I have realized that I need to start making real games.
+<p>After spending too much time doing that, I have realized that I need to start making real games, so I learned a bit of programming and began making games with GameMaker: Studio.
 
-<p>I learned a bit of programming, found GameMaker: Studio and suddenly I became a game developer. I am still amused by a fact that I am able to make games!
+<p>I make big games with complexity, customization, and procedural generation.
 
-<p>Since I have begun making games, I have made 4 larger games and several smaller ones. Usually, I work alone on my games because I'm not a team guy and that means that I have to do almost everything myself.
+<p>Usually, I work alone on my games because I'm not a team guy and that means that I have to do almost everything myself.
 
-<p>Luckily I'm not that bad at programming and I can make decent graphics. 
-
-<p>My goal is to create modern, complex, enormous games and every day I am getting closer to achieving that goal. I am very dedicated to making my games and it's the thing that I enjoy doing most.
-
-<p>I also love playing fantasy or science fiction RPG's, CCG's and tower defense games, reading - again - fantasy or science fiction books, talking with people who play my games and listening to music by Two Steps From Hell.
-
-<p>I hate limitations, outdated things, unoriginality, and beetroots.
+<p>I love playing RPG's, CCG's and tower defense games, reading fantasy books, talking with people who play my games and listening to EDM or music by Two Steps From Hell.
 
 <p>Oh, and sometimes I use 'Ello instead of Hello. Strange habit, I know.
 	
