--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,9 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<a>Coming soon!</a>
+<ul style="list-style-type:none">
+<li><a>Coming soon!</a></li>
+</ul>
 
 <comments>
 <a>Links</a>
