--- a/community/index.html
+++ b/community/index.html
@@ -10,15 +10,13 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<ul style="list-style-type:none">
-<li><a>Coming soon!</a></li>
-</ul>
+<p>Coming soon!</p>
 
 <comments>
 <a>Links</a>
 </comments>
 
-<ul style="list-style-type:none">
+<ul style="list-style-type:disc">
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam</a></li>
 <li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a></li>
 <li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</a></li>
