--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,8 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p>Coming soon!</p>
+<p>Want a mythical part for your spaceship?</p>
+<p>Run Sector Six, go to achievements page 2 and type GIFT to receive a mythical part!</p>
 
 <comments>
 <a>Links</a>
