--- a/community/index.html
+++ b/community/index.html
@@ -10,8 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p>Want a mythical part for your spaceship?</p>
-<p>Run Sector Six, go to achievements page 2 and type GIFT to receive a mythical part!</p>
+<p><i>Want a mythical part for your spaceship? Run Sector Six, go to achievements page 2 and type GIFT to receive a mythical part!</i></p>
 
 <comments>
 <a>Links</a>
