--- a/community/index.html
+++ b/community/index.html
@@ -11,6 +11,7 @@ title: Zuurix.com - Community
 </comments>
 
 <p><i>A secret Sector Six achievement can be achieved in the occupied area of Tarion. Equip Death From Above ability.</i></p>
+<p><i>PS.: Join Sector Six giveaway on my Discord server.</i></p>
 
 <comments>
 <a>Links</a>
