--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><i>A secret Sector Six achievement can be achieved in the occupied area of Tarion. Equip Death From Above ability.</i></p>
+<p><i>Check comments below for Sector Six giveaway!</i></p>
 
 <comments>
 <a>Links</a>
