--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,9 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><i>Check comments below for Sector Six giveaway!</i></p>
+<p><i>Want a mythical part for your spaceship?</i></p>
+<p><i>Run Sector Six, go to Rift region map and type MYTH to receive a mythical part!</i></p>
+<p><i>Works in demo!</i></p>
 
 <comments>
 <a>Links</a>
