--- a/community/index.html
+++ b/community/index.html
@@ -10,9 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><i>Want a mythical part for your spaceship?</i></p>
-<p><i>Run Sector Six, go to Rift region map and type MYTH to receive a mythical part!</i></p>
-<p><i>Works in demo!</i></p>
+<p><i>Secret Sector Six achievement can be achieved by collecting damage amplifiers.</i></p>
 
 <comments>
 <a>Links</a>
