--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,8 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><i>Secret Sector Six achievement can be achieved by collecting damage amplifiers.</i></p>
+<p><i>Happy new year!</i></p>
+<script type="text/javascript" src="http://www.easypolls.net/ext/scripts/emPoll.js?p=5a4a093ce4b04ebe73ddc81c"></script><a class="OPP-powered-by" href="https://www.easypolls.net/" style="text-decoration:none;"><div style="font: 9px arial; color: gray;">polls</div></a>
 
 <comments>
 <a>Links</a>
