--- a/community/index.html
+++ b/community/index.html
@@ -11,7 +11,7 @@ title: Zuurix.com - Community
 </comments>
 
 <p><i>Happy new year!</i></p>
-<script type="text/javascript" src="http://www.easypolls.net/ext/scripts/emPoll.js?p=5a4a093ce4b04ebe73ddc81c"></script><a class="OPP-powered-by" href="https://www.easypolls.net/" style="text-decoration:none;"><div style="font: 9px arial; color: gray;">polls</div></a>
+<script type="text/javascript" src="http://www.easypolls.net/ext/scripts/emPoll.js?p=5a4a0a37e4b04ebe73ddc81d"></script><a class="OPP-powered-by" href="http://www.objectplanet.com/opinio/" style="text-decoration:none;"><div style="font: 9px arial; color: gray;">survey service</div></a>
 
 <comments>
 <a>Links</a>
