--- a/community/index.html
+++ b/community/index.html
@@ -10,15 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<space>
-<a> </a>
-</space>
-
-<script type="text/javascript" src="http://www.easypolls.net/ext/scripts/emPoll.js?p=5a4a0a37e4b04ebe73ddc81d"></script><a class="OPP-powered-by" href="https://www.murvey.com" style="text-decoration:none;"><div style="font: 9px arial; color: gray;">surveys & polls</div></a>
-
-<space>
-<a> </a>
-</space>
+<p><a>Secret Sector Six achievement can be achieved by collecting damage amplifiers.</a></p>
 
 <comments>
 <a>Links</a>
