--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><a>Secret Sector Six achievement can be achieved by collecting damage amplifiers.</a></p>
+<p>Secret Sector Six achievement can be achieved by collecting damage amplifiers.</p>
 
 <comments>
 <a>Links</a>
