--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p>Secret Sector Six achievement can be achieved by collecting damage amplifiers.</p>
+<p><i>Secret Sector Six achievement can be achieved by collecting damage amplifiers.</i></p>
 
 <comments>
 <a>Links</a>
