--- a/games/index.html
+++ b/games/index.html
@@ -13,7 +13,7 @@ title: Zuurix.com - Games
 	
     	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
-	<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
+	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
 	
 	<ul style="list-style-type:none; margin-bottom: 136px;">
 	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
