--- a/other-games/index.html
+++ b/other-games/index.html
@@ -86,7 +86,7 @@ title: Zuurix.com - Other games
 	
 <img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/miscellaneous/Old%20game%20archive%20image.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
-<p>Zuuland! My first game and my first RPG. It is a foundation on which I've built my game empire =]</p>	
+<p>Zuuland! My first game and my first RPG.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/zuuland" target="_blank">Download</a></li>
