--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><i>Learn the language of the Almadi! <a href="http://games-by-zuurix.wikia.com/wiki/The_Almadi_language" target="_blank">Click here >></a></i></p>
+<p><i>Secret Sector Six achievement can be achieved by claiming generic weapon rewards.</i></p>
 
 <comments>
 <a>Links</a>
