--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -1,1 +1,109 @@
+---
+layout: default
+title: Zuurix.com - Sector Six
+---
+<div class="blurb">
+  <h1>Sector Six</h1>
+	
+	<comments>
+	<a>Game description</a>
+	</comments>
+	
+	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>
+	
+	<p><i>Create.</i> As you play the game, you receive procedurally generated parts and experience. Parts is what you build your spaceship from and experience allows you to level up. Leveling up increases amount of parts you can add to your spaceship and gives ability points, which can be used to unlock and upgrade combat abilities.</p>
+	
+	<p><i>Destroy.</i> Once you are done with upgrading, equipping, modifying, refilling and optimizing your spaceship, it's time to test it in a fight! Choose one of many available missions to instantly jump into combat. Missions are procedurally generated, you will never know which enemies you will encounter next. There are many enemies in Sector Six, each comes with its own set of abilities, strengths, and weaknesses. Defeat them by dodging their projectiles and firing weapons on your spaceship by activating equipped abilities.</p>
+	
+	<p><i>Repeat.</i> You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part you will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with an amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!</p>
+	
+	<comments>
+	<a>Game story</a>
+	</comments>
+	
+	<p><i>Sector Six is under attack, the Machines, massive automatic spaceships are destroying everything! No weapon can stop the Machines, the only hope is the Elder Mechanism, an ancient device of the mighty Almadi civilization, who colonized Sector Six a long time ago.</i></p>
 
+	<p><i>You take the role of the Negati Armada's best fighter, who, due to a dramatic chain of events receives the Elder Mechanism. Go on an epic journey across the mysterious Sector, develop your spaceship, activate the Elder Mechanism and defeat the Machines, before it's too late!</i></p>
+	
+	<comments>
+	<a>Features</a>
+	</comments>
+	
+	<ol style="list-style-type:disc">
+
+	<li><p>Spaceship building from procedurally generated parts</p></li>
+	<li><p>Story driven missions including cutscenes and dialog</p></li>
+	<li><p>Unique silhouette art style</p></li>
+	<li><p>Complex combat system</p></li>
+	<li><p>Deep character customization</p></li>
+	<li><p>Millions of randomly generated items</p></li>
+	<li><p>Choose your own difficulty with modular difficulty system</p></li>
+		
+	</ol>
+		
+	<comments>
+	<a>Trailer</a>
+	</comments>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/DRqp3gsbvOw" frameborder="0" allowfullscreen></iframe>
+  
+  <comments>
+	<a>Developer</a>
+	</comments>
+	
+	<ul style="list-style-type:none">
+	<li>Zuurix</li>
+	<li><b>Website:</b> http://zuurix.com//</li>
+	<li><b>Facebook:</b> https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
+	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
+	</ul>
+	
+	<comments>
+	<a>Publisher</a>
+	</comments>
+	
+	<ul style="list-style-type:none">
+
+	<li>The Freekshow</li>
+	<li><b>Website:</b> http://www.freekshow.de/</li>
+
+	</ul>
+	
+	<comments>
+	<a>Availability</a>
+	</comments>
+	
+	<ul style="list-style-type:none">
+
+	<li><b>Platforms:</b> Windows, Linux</li>
+	<li><b>Stores:</b> Steam</li>
+	<li><b>Steam Store link: </b>http://store.steampowered.com/app/465020</li>
+	<li><b>Price:</b> 9.99 €</li>
+
+	</ul>
+	
+	<comments>
+	<a>Status</a>
+	</comments>
+	
+	<ul style="list-style-type:none">
+
+	<li>In development</li>
+	<li>Beta</li>
+	<li>Early Access</li>
+	<li><b>Estimated release date: </b>Q4 2017</li>
+
+	</ul>
+	
+	<comments>
+	<a>Press contact</a>
+	</comments>
+	
+	<ul style="list-style-type:none">
+
+	<li>Aivaras Klimas</li>
+	<li><b>Email:</b> zuurixgames@gmail.com</li>
+
+	</ul>
+	
+</div><!-- /.blurb -->
