--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -3,51 +3,47 @@ layout: default
 title: Zuurix.com - Sector Six
 ---
 <div class="blurb">
-  <h1>Sector Six</h1>
 	
-	<comments>
-	<a>Game description</a>
-	</comments>
+<h1>Sector Six</h1>
 	
-	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>
+Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.
+  
+<comments>
+<a>Features</a>
+</comments>
 	
-	<p><i>Create.</i> As you play the game, you receive procedurally generated parts and experience. Parts is what you build your spaceship from and experience allows you to level up. Leveling up increases amount of parts you can add to your spaceship and gives ability points, which can be used to unlock and upgrade combat abilities.</p>
-	
-	<p><i>Destroy.</i> Once you are done with upgrading, equipping, modifying, refilling and optimizing your spaceship, it's time to test it in a fight! Choose one of many available missions to instantly jump into combat. Missions are procedurally generated, you will never know which enemies you will encounter next. There are many enemies in Sector Six, each comes with its own set of abilities, strengths, and weaknesses. Defeat them by dodging their projectiles and firing weapons on your spaceship by activating equipped abilities.</p>
-	
-	<p><i>Repeat.</i> You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part you will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with an amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!</p>
-	
-	<comments>
-	<a>Game story</a>
-	</comments>
-	
-	<p><i>Sector Six is under attack, the Machines, massive automatic spaceships are destroying everything! No weapon can stop the Machines, the only hope is the Elder Mechanism, an ancient device of the mighty Almadi civilization, who colonized Sector Six a long time ago.</i></p>
+<p>Save the Universe</p>
 
-	<p><i>You take the role of the Negati Armada's best fighter, who, due to a dramatic chain of events receives the Elder Mechanism. Go on an epic journey across the mysterious Sector, develop your spaceship, activate the Elder Mechanism and defeat the Machines, before it's too late!</i></p>
-	
-	<comments>
-	<a>Features</a>
-	</comments>
-	
-	<ol style="list-style-type:disc">
+<p>Enter distant future and join the desperate fight to stop the Eight Machines from destroying everything.</p>
+<p>Unleash apocalyptic weapons, break laws of physics, resurrect ravaged dimensions - nothing is impossible in a war of this scale.</p>
 
-	<li><p>Spaceship building from procedurally generated parts</p></li>
-	<li><p>Story driven missions including cutscenes and dialog</p></li>
-	<li><p>Unique silhouette art style</p></li>
-	<li><p>Complex combat system</p></li>
-	<li><p>Deep character customization</p></li>
-	<li><p>Millions of randomly generated items</p></li>
-	<li><p>Choose your own difficulty with modular difficulty system</p></li>
-		
-	</ol>
-		
+<p>Build your spaceship</p>
+
+<p>Build your spaceship from procedural parts, obtained by destroying minions of the Machines and completing missions.</p>
+<p>Every part has various properties and can be placed anywhere on the building field, allowing you to customize performance and appearance of your spaceship however you want.</p>
+
+<p>Become master of spaceship combat</p>
+
+<p>Test not just your spaceship, but also your skills as you dodge enemy projectiles and find the right timing to counterattack with your own.</p>
+<p>Each enemy brings new attacks, defenses, and strategies to defeat - it’s up to you to hone your combat skills and take them down.</p>
+
+<p>Spaceship part customization and part sets</p>
+
+<p>Combine, upgrade and re-roll parts to create ones that are ideal for your dream spaceship.</p>
+<p>If that is not enough, collect set parts to activate game-changing set effects and transform your destroyer of invaders into something even more powerful!</p>
+
+<p>Modular difficulty system</p>
+
+<p>Make the game as hard as you want it to be!</p>
+<p>Forget "Easy / Medium / Hard" - the modular difficulty system allows you to modify almost every element of the combat and even gives rewards for it.</p>
+
 	<comments>
 	<a>Trailer</a>
 	</comments>
 	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/DRqp3gsbvOw" frameborder="0" allowfullscreen></iframe>
   
-  <comments>
+  	<comments>
 	<a>Developer</a>
 	</comments>
 	
