--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -6,36 +6,31 @@ title: Zuurix.com - Sector Six
 	
 <h1>Sector Six</h1>
 	
-Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.
+<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.</p>
   
 <comments>
 <a>Features</a>
 </comments>
 	
-<p>Save the Universe</p>
+<p><b>Save the Universe</b></p>
 
-<p>Enter distant future and join the desperate fight to stop the Eight Machines from destroying everything.</p>
-<p>Unleash apocalyptic weapons, break laws of physics, resurrect ravaged dimensions - nothing is impossible in a war of this scale.</p>
+<p>Enter distant future and join the desperate fight to stop the Eight Machines from destroying everything. Unleash apocalyptic weapons, break laws of physics, resurrect ravaged dimensions - nothing is impossible in a war of this scale.</p>
 
-<p>Build your spaceship</p>
+<p><b>Build your spaceship</b></p>
 
-<p>Build your spaceship from procedural parts, obtained by destroying minions of the Machines and completing missions.</p>
-<p>Every part has various properties and can be placed anywhere on the building field, allowing you to customize performance and appearance of your spaceship however you want.</p>
+<p>Build your spaceship from procedural parts, obtained by destroying minions of the Machines and completing missions. Every part has various properties and can be placed anywhere on the building field, allowing you to customize performance and appearance of your spaceship however you want.</p>
 
-<p>Become master of spaceship combat</p>
+<p><b>Become master of spaceship combat</b></p>
 
-<p>Test not just your spaceship, but also your skills as you dodge enemy projectiles and find the right timing to counterattack with your own.</p>
-<p>Each enemy brings new attacks, defenses, and strategies to defeat - it’s up to you to hone your combat skills and take them down.</p>
+<p>Test not just your spaceship, but also your skills as you dodge enemy projectiles and find the right timing to counterattack with your own. Each enemy brings new attacks, defenses, and strategies to defeat - it’s up to you to hone your combat skills and take them down.</p>
 
-<p>Spaceship part customization and part sets</p>
+<p><b>Spaceship part customization and part sets</b></p>
 
-<p>Combine, upgrade and re-roll parts to create ones that are ideal for your dream spaceship.</p>
-<p>If that is not enough, collect set parts to activate game-changing set effects and transform your destroyer of invaders into something even more powerful!</p>
+<p>Combine, upgrade and re-roll parts to create ones that are ideal for your dream spaceship. If that is not enough, collect set parts to activate game-changing set effects and transform your destroyer of invaders into something even more powerful!</p>
 
-<p>Modular difficulty system</p>
+<p><b>Modular difficulty system</b></p>
 
-<p>Make the game as hard as you want it to be!</p>
-<p>Forget "Easy / Medium / Hard" - the modular difficulty system allows you to modify almost every element of the combat and even gives rewards for it.</p>
+<p>Make the game as hard as you want it to be! Forget "Easy / Medium / Hard" - the modular difficulty system allows you to modify almost every element of the combat and even gives rewards for it.</p>
 
 	<comments>
 	<a>Trailer</a>
