--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -9,6 +9,14 @@ title: Zuurix.com - Sector Six
 <p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.</p>
   
 <comments>
+<a>Get Sector Six</a>
+</comments>	
+	
+<ul style="list-style-type:none; margin-bottom: 0px;">
+<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
+</ul>
+	
+<comments>
 <a>Features</a>
 </comments>
 	
@@ -36,8 +44,16 @@ title: Zuurix.com - Sector Six
 	<a>Trailer</a>
 	</comments>
 	
+	<space>
+	<a> </a>
+	</space>
+	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/DRqp3gsbvOw" frameborder="0" allowfullscreen></iframe>
   
+	<space>
+	<a> </a>
+	</space>
+	
   	<comments>
 	<a>Developer</a>
 	</comments>
