--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><i>Secret Sector Six achievement can be achieved by claiming generic weapon rewards.</i></p>
+<p><i>Run Sector Six, go to Deep Path region map and type WIN to receive a mythical part!</i></p>
 
 <comments>
 <a>Links</a>
