--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -100,14 +100,15 @@ title: Zuurix.com - Sector Six press kit
 	<a>Screenshots</a>
 	</comments>
 	
-	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="height: 320px; width: 480px;"/></a>
+	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/1.%20Using%20Era's%20End%20ability.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/1.%20Using%20Era's%20End%20ability.png?raw=true" title="Using Era's End ability" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="height: 320px; width: 480px;"/></a>
+	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/2.%20Fighting%20scythe.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/2.%20Fighting%20scythe.png?raw=true" title="Fighting scythe" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="height: 320px; width: 480px;"/></a>
+	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/3.%20Fully%20upgraded%20rare%20item.png"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/3.%20Fully%20upgraded%20rare%20item.png" title="Rare item" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="height: 320px; width: 480px;"/></a>
+	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true" title="Inventory" style="height: 320px; width: 480px;"/></a>
 	
+	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/8.%20Fighting%20barrager.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/8.%20Fighting%20barrager.png?raw=true" title="Fighting barrager" style="height: 320px; width: 480px;"/></a>
 
 	<comments>
 	<a>Images</a>
