--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -108,7 +108,7 @@ title: Zuurix.com - Sector Six press kit
 	
 	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true" title="Inventory" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/8.%20Fighting%20barrager.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/8.%20Fighting%20barrager.png?raw=true" title="Fighting barrager" style="height: 320px; width: 480px;"/></a>
+	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/8.%20Fighting%20barrager.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/8.%20Fighting%20barrager.png?raw=true" title="Fighting barrager" /></a>
 
 	<comments>
 	<a>Images</a>
