--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -100,14 +100,22 @@ title: Zuurix.com - Sector Six press kit
 	<a>Screenshots</a>
 	</comments>
 	
-	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/1.%20Using%20Era's%20End%20ability.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/1.%20Using%20Era's%20End%20ability.png?raw=true" title="Using Era's End ability" style="height: 320px; width: 480px;"/></a>
+	<a href=
+	   "https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/1.%20Using%20Era's%20End%20ability.png?raw=true">
+		<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/1.%20Using%20Era's%20End%20ability.png?raw=true" title="Using Era's End ability" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/2.%20Fighting%20scythe.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/2.%20Fighting%20scythe.png?raw=true" title="Fighting scythe" style="height: 320px; width: 480px;"/></a>
+	<a href=
+	   "https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/2.%20Fighting%20scythe.png?raw=true">
+		<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/2.%20Fighting%20scythe.png?raw=true" title="Fighting scythe" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true"><img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true" title="Inventory" style="height: 320px; width: 480px;"/></a>
+	<a href=
+	   "https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true">
+		<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true" title="Inventory" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/3.%20Fully%20upgraded%20rare%20item.png?raw=true" title="Rare item" /></a>
-
+	<a href=
+	   "https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/3.%20Fully%20upgraded%20rare%20item.png?raw=true">
+		<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/3.%20Fully%20upgraded%20rare%20item.png?raw=true" title="Rare item" style="height: 320px; width: 480px;"/></a>
+	
 	<comments>
 	<a>Images</a>
 	</comments>
