--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><i>Echo #100 is coming soon!</i></p>
+<p><i>Echo #100 is going to be posted on Sunday!</i></p>
 
 <comments>
 <a>Links</a>
