--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Weekly message</a>
 </comments>
 
-<p><i>Run Sector Six, go to settings, mute sounds, and type ETALON to get etalon part!</i></p>
+<p><i>Secret Sector Six achievement can be achieved in besieged Bloom.</i></p>
 
 <comments>
 <a>Links</a>
