--- a/community/index.html
+++ b/community/index.html
@@ -7,10 +7,11 @@ title: Zuurix.com - Community
 <p>Follow, like, share, join, contribute, discuss!</p>
 
 <comments>
-<a>Weekly message</a>
+<a>Message from Zuurix</a>
 </comments>
 
-<p><i>Secret Sector Six achievement can be achieved in besieged Bloom.</i></p>
+<p><i>Sector Six has entered the final development stage!</i></p>
+<p><i>Not going to update the message until Sector Six is out of Early Access.</i></p>
 
 <comments>
 <a>Links</a>
