--- a/community/index.html
+++ b/community/index.html
@@ -10,8 +10,7 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p><i>Sector Six has entered the final development stage!</i></p>
-<p><i>Not going to update the message until Sector Six is out of Early Access.</i></p>
+<p><i>Sector Six has entered the final development stage! Not going to update the message until Sector Six is out of Early Access.</i></p>
 
 <comments>
 <a>Links</a>
