--- a/about/index.html
+++ b/about/index.html
@@ -6,20 +6,33 @@ title: Zuurix.com - About
 
 <h1>About</h1>
 
-<p>'Ello! I am Ivar, also known as an independent game developer Zuurix.
-<p>I am 21 years old and I am from Lithuania, which explains all the grammar errors =]
+<p>Hello!
 
-<p>Ever since I have discovered the awesomeness that is computer games, I wanted to make my own.
-<p>Before I started developing games, I used to make drawings in MS Paint - quest logs, items, areas, monsters and other elements of a fictional game, that I pretended to be making.
+I am Ivar, also known as an independent game developer Zuurix.
 
-<p>After spending too much time doing that, I have realized that I need to start making real games, so I learned a bit of programming and began making games with GameMaker: Studio.
+Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.
 
-<p>I make big games with complexity, customization, and procedural generation.
+Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.
+I used MS Paint to make interfaces for the games I pretended to be making.
 
-<p>Usually, I work alone on my games because I'm not a team guy and that means that I have to do almost everything myself.
+In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
+The fall of RuneScape has left a huge void in my life and because I was unable to find a replacement for that game, I decided to start making my own games.
 
-<p>I love playing RPG's, CCG's and tower defense games, reading fantasy books, talking with people who play my games and listening to EDM or music by Two Steps From Hell.
+I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.
 
-<p>Oh, and sometimes I use 'Ello instead of Hello. Strange habit, I know.
+In May 2016 I have released my first game on Steam.
+
+I am planning to release more games in 2018, 2019, and 2020.
+
+I have some programming and design experience, I can create a full game with GameMaker: Studio.
+
+The only things that I truly can't do are sounds and music.
+
+When I don't make games, I play games.
+I'm also sci-fi/fantasy book and movie enthusiast.
+
+- - -
+
+End of description.</p>
 	
 </div><!-- /.blurb -->
