--- a/about/index.html
+++ b/about/index.html
@@ -6,33 +6,33 @@ title: Zuurix.com - About
 
 <h1>About</h1>
 
-<p>Hello!
+<p>Hello!</p>
 
-I am Ivar, also known as an independent game developer Zuurix.
+<p>I am Ivar, also known as an independent game developer Zuurix.</p>
 
-Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.
+<p>Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.</p>
 
-Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.
-I used MS Paint to make interfaces for the games I pretended to be making.
+<p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.</p>
+I used MS Paint to make interfaces for the games I pretended to be making.</p>
 
-In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
-The fall of RuneScape has left a huge void in my life and because I was unable to find a replacement for that game, I decided to start making my own games.
+<p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.</p>
+<p>The fall of RuneScape has left a huge void in my life and because I was unable to find a replacement for that game, I decided to start making my own games.</p>
 
-I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.
+<p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.</p>
 
-In May 2016 I have released my first game on Steam.
+<p>In May 2016 I have released my first game on Steam.</p>
 
-I am planning to release more games in 2018, 2019, and 2020.
+<p>I am planning to release more games in 2018, 2019, and 2020.</p>
 
-I have some programming and design experience, I can create a full game with GameMaker: Studio.
+<p>I have some programming and design experience, I can create a full game with GameMaker: Studio.</p>
 
-The only things that I truly can't do are sounds and music.
+<p>The only things that I truly can't do are sounds and music.</p>
 
-When I don't make games, I play games.
-I'm also sci-fi/fantasy book and movie enthusiast.
+<p>When I don't make games, I play games.</p>
+<p>I'm also sci-fi/fantasy book and movie enthusiast.</p>
 
-- - -
+<p>- - -</p>
 
-End of description.</p>
+<p>End of description.</p>
 	
 </div><!-- /.blurb -->
