--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@ title: Zuurix.com - About
 <p>Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.</p>
 
 <p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.</p>
-I used MS Paint to make interfaces for the games I pretended to be making.</p>
+<p>I used MS Paint to make interfaces for the games I pretended to be making.</p>
 
 <p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.</p>
 <p>The fall of RuneScape has left a huge void in my life and because I was unable to find a replacement for that game, I decided to start making my own games.</p>
@@ -30,8 +30,6 @@ I used MS Paint to make interfaces for the games I pretended to be making.</p>
 
 <p>When I don't make games, I play games.</p>
 <p>I'm also sci-fi/fantasy book and movie enthusiast.</p>
-
-<p>- - -</p>
 
 <p>End of description.</p>
 	
